FIX: wight container on mobile

--- a/src/sass/utils/_container.scss
+++ b/src/sass/utils/_container.scss
@@ -5,8 +5,8 @@
   padding-right: 15px;
   width: 100%;
 
-  @media screen and (min-width: 320px) {
-    width: 320px;
+  @media screen and (min-width: 360px) {
+    width: 360px;
   }
 
   @media screen and (min-width: 768px) {
